--- a/photography-booking/src/main/resources/application.properties
+++ b/photography-booking/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username = root
 spring.datasource.password = Amsyar99
 
 # hibernate properties
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 #hibernate ddl auto (create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
