--- a/photography-booking/src/main/resources/application.properties
+++ b/photography-booking/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-
 spring.datasource.url = jdbc:mysql://localhost:3306/photography?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = Amsyar99
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 # hibernate properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
